# tetracubed-api

./: Pulumi.dev.yaml  Pulumi.yaml  README.md  __main__.py  datasync.py  discord_notifier.py  ecs_service.py  main.py  pyproject.toml  update_hostname_ip.py
config/: config.py
infrastructure/data/: datasync.py  datasync_execution.py  datasync_provider.py
infrastructure/dns/: ddns_provider.py
infrastructure/ecs/: ecs.py  ecs_service_provider.py
infrastructure/networking/: security_groups.py  vpc.py
infrastructure/storage/: efs.py
